@@ -29,7 +29,7 @@
 # referenced as a library via a require statement, but it can be
 # distributed independently as an application.
 
-RAKEVERSION = '0.7.1.2'
+RAKEVERSION = '0.7.1.3'
 
 require 'rbconfig'
 require 'ftools'
@@ -1133,7 +1133,7 @@ module Rake
 
     def resolve_add(fn)
       case fn
-      when %r{[*?]}
+      when %r{[*?\[\{]}
         add_matching(fn)
       else
         self << fn
