@@ -9,6 +9,7 @@
 * Added rcov task and updated unit testing for better code coverage.
 * Fixed some bugs where the application object was going to the global
   appliation instead of using its own data.
+* Added square and curly bracket patterns to FileList#include (Tilman Sauerbeck).
 
 == Version 0.7.1
 
